using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class StringClass
{
    public static string TAG_ISIDLE = "isIdle";
    public static string TAG_ISRUNNING = "isRunning";
    public static string TAG_ISDEATH = "isDeath";
    public static string TAG_ISUNDERGROUND = "isUnderground";
    public static string TAG_ISDANCE = "isDance";
    public static string TAG_ISMUSCLEWALK = "isMuscleWalk";
    public static string TAG_ISMUSCLEPUNCH = "isMusclePunch";
    public static string TAG_ISGARDENERFALL = "isGardenerFall";
    public static string TAG_FENSE = "fense";
    public static string TAG_ROCK = "rock";
    public static string TAG_GARDENER = "gardener";
    public static string TAG_MUSCLEBUNNY = "muscleBunny";
    public static string TAG_CARROT = "carrot";
    public static string TAG_TRAP = "trap";
    public static string TAG_FINISH = "finish";
}
